# mlti

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  cli.go  colors.go  commands.go  config.go  go.mod  input.go  main.go  package.json  pnpm-lock.yaml  printer.go  scheduler.go  tasks.go
.github/workflows/: ci.yml  release.yml
ci/: build.bat  build.sh
docs/: ARCHITECTURE.md  DATA_FLOW.md  FEATURE_GAP.md  RUST_PATTERNS.md
docs/superpowers/plans/: 2026-04-11-stdin-forwarding.md  2026-04-11-wildcard-matching.md
docs/superpowers/specs/: 2026-04-11-stdin-forwarding-design.md  2026-04-11-wildcard-matching-design.md
npm/: getBinary.js  run.js  uninstall.js
src/: arg_parser.rs  command.rs  command_expander.rs  command_parser.rs  input_router.rs  logger.rs  main.rs  message.rs  messenger.rs  runner.rs  scheduler.rs  task.rs
tests/: stdin_forwarding.rs
