[package]
name = "rustly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
chrono-humanize = "0.2.2"
clap = { version = "4.0.18", features = ["cargo"] }
ctrlc = "3.2.3"
flume = "0.10.14"
futures = "0.3.25"
num_cpus = "1.13.1"
owo-colors = "3.5.0"
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["net", "rt", "macros", "rt-multi-thread", "process", "io-util", "time", "sync"] }
